# PyAutoRestart

./: .editorconfig  .gitignore  Cargo.toml  README.md  file_update.py  main.py  pyproject.toml  test.py
.github/workflows/: CI.yml  rust.yml
pyautorestart/: file_update.py  main.py
src/: commands.rs  main.rs  utils.rs
