[package]
name = "pymon"
version = "2.0.0"
authors = ["Aidan Tomcy <aidantomcy@gmail.com>"]
license = "MIT"
description = "A tool to re-run your Python application when files are changed"
readme = "README.md"
homepage = "https://github.com/aidantomcy/pymon"
repository = "https://github.com/aidantomcy/pymon"
keywords = ["cli", "python", "development", "nodemon"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0"
termcolor = "1.1"
